Updated to acme.sh

--- a/templates/nginx-htpasswd.j2
+++ b/templates/nginx-htpasswd.j2
@@ -1,4 +1,4 @@
-{% for user,password in item.http_basic_auth.items() %}
+{% for user,password in nginx_site.http_basic_auth.items() %}
 {{ user }}:{{ password }}
 {% endfor %}
 # {{ ansible_managed }}
