--- a/templates/nginx-main.conf.j2
+++ b/templates/nginx-main.conf.j2
@@ -37,9 +37,13 @@ http {
     # Load modular configuration files from the /etc/nginx/conf.d directory.
     # See http://nginx.org/en/docs/ngx_core_module.html#include
     # for more information.
+
     include /etc/nginx/conf.d/*.conf;
-    {% if nginx_sites_dir is defined %}include {{ nginx_sites_dir }}/*.conf;{% endif %}
-    {% if nginx_proxy_dir is defined %}include {{ nginx_proxy_dir }}/*.conf;{% endif %}
+
+    # Load ansible configured files
+    {% for site in nginx_sites %}
+    include {{ nginx_sites_dir }}/{{ site.name }}.conf ;
+    {% endfor %}
 
 }
 # {{ ansible_managed }}
