--- a/templates/nginx-static-site.j2
+++ b/templates/nginx-static-site.j2
@@ -7,12 +7,12 @@
 
 server {
 {% if nginx_site.with_ssl %}
-        listen 443 ssl
+        listen {{ nginx_site.https_port|default(443) }} ssl
         {%- if nginx_site.with_http2|default(True) %} http2 {% endif %}
         {%- if nginx_site.is_default|default(False) %} default_server {% endif %};
 {% endif %}
 {% if not nginx_site.with_ssl or nginx_site.without_ssl|default(False) %}
-        listen 80
+        listen {{  nginx_site.http_port|default(80) }}
         {%- if nginx_site.is_default|default(False) %} default_server {% endif %};
 {% endif %}
 
@@ -57,16 +57,13 @@ server {
                 client_max_body_size    128m;
         }
 {% endif %}
-        # Add acme-challenge for LetsEncrypt
-        location /.well-known/acme-challenge/ {
-                proxy_pass http://127.0.0.1:{{ nginx_acmesh_port }}/.well-known/acme-challenge/;
-        }
+        {{ nginx_acme_challenge }}
 }
 
 {% if nginx_site.with_ssl and not nginx_site.without_ssl|default(False) %}
 # create port 80 redirect
 server {
-        listen 80
+        listen {{ nginx_site.http_port|default(80) }}
         {%- if nginx_site.is_default|default(False) %} default_server {% endif %};
 
         server_name {{ nginx_site.name }};
@@ -82,11 +79,7 @@ server {
         }
 {% endif %}
 
-        # Add acme-challenge for LetsEncrypt
-        location /.well-known/acme-challenge/ {
-            proxy_pass http://127.0.0.1:{{ nginx_acmesh_port }}/.well-known/acme-challenge/;
-        }
-
+      {{ nginx_acme_challenge|indent(4) }}
 }
 {% endif %}
 
