--- a/templates/nginx-static-site.j2
+++ b/templates/nginx-static-site.j2
@@ -17,8 +17,10 @@ server {
 {% endif %}
 
         server_name {{ nginx_site.name }};
+{% if nginx_site.default_log|default(True) %}
         access_log  /var/log/nginx/{{nginx_site.name}}-access_log main;
         error_log /var/log/nginx/{{nginx_site.name}}-error_log;
+{% endif %}
 
 {% if nginx_site.with_ssl|default(True) %}        {#  FIXME: parametrize this #}
     {% if nginx_site.request_acme_cert|default(True) %}
@@ -29,13 +31,7 @@ server {
         ssl_certificate_key  /etc/pki/nginx/{{ nginx_site.name }}/key.pem;
     {% endif %}
 
-        ssl_session_cache shared:SSL:1m;
-        ssl_session_timeout  5m;
-
-        ssl_prefer_server_ciphers   on;
-        ssl_protocols TLSv1 TLSv1.1 TLSv1.2;
-        ssl_ciphers 'EECDH+AESGCM:EDH+AESGCM:AES256+EECDH:AES256+EDH';
-        ssl_dhparam /etc/nginx/dhparams.pem;
+{{ nginx_site.ssl_config|default(nginx_default_ssl_config)|indent(8) }}
 {% endif %}
 
 {% if 'http_basic_auth' in nginx_site %}
@@ -57,7 +53,7 @@ server {
                 client_max_body_size    128m;
         }
 {% endif %}
-        {{ nginx_acme_challenge }}
+        {{ nginx_acme_challenge|indent(8) }}
 }
 
 {% if nginx_site.with_ssl|default(True) and not nginx_site.without_ssl|default(False) %}
