--- a/templates/nginx-main.conf.j2
+++ b/templates/nginx-main.conf.j2
@@ -35,6 +35,9 @@ http {
             ;
     {% endfor -%}
 
+    # use common SSL config
+    {{ nginx_default_ssl_config|indent(4) }}
+
     # Load modular configuration files from the /etc/nginx/conf.d directory.
     # See http://nginx.org/en/docs/ngx_core_module.html#include
     # for more information.
